css/styles.css
body {
  font-family: 'Open Sans', sans-serif;
  padding-top: 99px;
  position: relative; }

p {
  font-size: 18px; }

.navbar-light .navbar-toggler {
  border: none; }

.navbar-light .navbar-toggler:focus,
.navbar-light.navbar-toggler:hover {
  background-color: transparent; }

.navbar-light .navbar-nav .nav-link, h1, h1, h3, h4, p {
  color: #404041; }

.text-muted {
  color: #999 !important; }

.nav-pills .nav-link.active {
  background-color: #ef7622;
  cursor: pointer;
  transition: all 0.5s ease;
  color: #fff !important;
  padding-left: 20px;
  padding-right: 20px; }

.nav-pills .nav-link.active:hover, #contact input.btn.btn-lg:hover {
  background-color: #ed9051; }

.navbar {
  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12); }

.abc-section {
  background: url("../images/rbz-bp-ms150-finish-13.jpg");
  background-size: cover;
  background-position: bottom center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  width: 100%;
  height: 50vh; }

@media only screen and (min-width: 768px) {
  .abc-section {
    background-attachment: fixed;
    height: 75vh;
    background-position: center center; } }

img.why-icon {
  width: 100px;
  display: block;
  padding-bottom: 10px; }

.how-accordian a:hover, .how-accordian a:focus {
  text-decoration: none; }

/*#headingOne {
  border-top: 110px solid transparent;
  margin-top: -110px;
  -webkit-background-clip: padding-box;
  -moz-background-clip: padding;
  background-clip: padding-box;
}*/
.card .hide {
  display: none; }

/*.card-header {
  background-color: #fff;
}*/
.card-header:hover, .card-header:focus, .card-header:active {
  background-color: whitesmoke; }

.how-accordian a:hover {
  text-decoration: none !important; }

.card-header h4 {
  color: #00a94f; }

.card-header:after {
  font-family: FontAwesome;
  content: "\f068";
  float: right;
  color: #404041;
  padding-top: 1em; }

.collapsed > .card-header:after {
  font-family: FontAwesome;
  content: "\f067";
  float: right;
  color: #404041;
  padding-top: 1em; }

@media only screen and (min-width: 459px) and (max-width: 768px) {
  .card-header-text {
    max-width: 300px; } }

@media only screen and (max-width: 458px) {
  .card-header-text {
    max-width: 270px;
  }
  .card-header img {
      display: none;
  }
}

#contact label {
  font-size: 1.25rem; }

